container 1 fixed and aligned.
I did look at someone else's work. After looking I stole
their font styles and some other ideas. No regrets.

I searched 'random color combinations in hex' and chose this one.
Looks nice.

I need to commit more often as the last screenshot is very
different to this one.

--- a/style.css
+++ b/style.css
@@ -4,19 +4,41 @@ body {
     min-height: 100vh;
 }
 
-.container1, .container2, .container3, .container4{
+.container1, .container2{
+    background-color: #FC766A;
+}
+
+.container3{
+    background-color: #783937;
+}
+
+.container4, .footer{
+    background-color: #F1AC88;
+}
+
+.container2, .container3, .container4{
     padding-left: 100px;
     padding-right: 100px;
 }
 
-.container3, .container4{
-    margin-top: 75px;
-    margin-bottom: 75px;
-}
 
 .content{
     flex-grow: 1;
 }
+
+h1,
+h2,
+h3 {
+  font-weight: 600;
+  line-height: 1.1;
+  margin-top: 0;
+}
+
+body {
+    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: rgb(207, 206, 206);
+  }
 
 /*-----------------------CONTAINER 1-----------------------*/
 
@@ -27,16 +49,31 @@ body {
     padding-top: 16px;
 }
 
-.box457{
+.section-wrapper{
     display: flex;
     flex-direction: column;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
+.hero {
+    min-height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 80px;
+}
 
 .container1{
     display: flex;
     justify-content: center;
     gap: 50px;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+.contain{
+    flex: 1;
 }
 
 .contain h1, .contain p {
@@ -45,8 +82,8 @@ body {
 
 .placeholder{
     height: 150px;
-    width: 350px;
-    flex-basis: 150px;
+    width: 600px;
+    flex-basis: 500px;
     border-radius: 0.5cm;
     background-color: rgb(105, 160, 105);
     flex-shrink: 1;
@@ -91,6 +128,10 @@ ul{
     text-align: center;
 }
 
+.container2{
+    padding: 50px;
+}
+
 .information {
     display: flex;
     justify-content: center;
@@ -106,19 +147,19 @@ ul{
 }
 
 .one{
-    background-color: rgb(105, 160, 105);
+    background-color: #a0463b;
 }
 
 .two{
-    background-color: rgb(86, 131, 86);
+    background-color: #853b32;
 }
 
 .three{
-    background-color: rgb(73, 110, 73)
+    background-color: #693028;
 }
 
 .four{
-    background-color: rgb(55, 82, 55);
+    background-color: #50251f;
 }
 
 .info{
@@ -130,7 +171,6 @@ ul{
 /*-----------------------CONTAINER 3-----------------------*/
 
 .container3{
-    background-color: antiquewhite;
     display: flex;
     justify-content: center;
     padding: 100px 100px;
@@ -154,12 +194,13 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 100px;
 }
 
 .box{
-    background-color: antiquewhite;
+    background-color: #783937;
     display: flex;
-    flex-basis: 1000px;
+    flex-basis: 800px;
     justify-content: space-around;
     align-items: center;
     padding: 30px;
@@ -176,6 +217,5 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(82, 121, 82);
     color: white;
 }
